Changement de l'icone !

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="icon" href="assets/pics/BaseMoche/tete.png" />
+    <link rel="icon" href="assets/pics/face/5.png" />
 
     <meta charset="UTF-8">
     <title>Parlote3</title>
